<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SettingsActivity" >
    

            <TextView
                android:id="@+id/txvServiceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/title_service_control_setting" />

            <Switch
                android:id="@+id/switchBackgroundService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/label_location_service_setting" />

            <TextView
                android:id="@+id/txvServiceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/description_service_control_setting" />

            <TextView
                android:id="@+id/txvServiceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_service_ip_setting" />

            <EditText
                android:id="@+id/txtServiceAddress"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/description_service_ip_setting" />

            <TextView
                android:id="@+id/txtEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_email_setting" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

</LinearLayout>
